MOAR SPACING ISSUES

--- a/public/stylesheets/base/_buttons.scss
+++ b/public/stylesheets/base/_buttons.scss
@@ -15,7 +15,6 @@
   text-decoration: none;
   transition: background-color $base-duration $base-timing;
   user-select: none;
-  vertical-align: middle;
   white-space: nowrap;
 
   &:hover,
